--- a/html&css/webdev-Colt/06/06_CSS-TheVeryBasics.html
+++ b/html&css/webdev-Colt/06/06_CSS-TheVeryBasics.html
@@ -3,6 +3,9 @@
 
     <head>
         <title>CSS - The Very Basics</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
 
