--- a/html&css/webdev-Colt/09/09.1_FancyButtonHoverEffectCodeAlong.html
+++ b/html&css/webdev-Colt/09/09.1_FancyButtonHoverEffectCodeAlong.html
@@ -6,15 +6,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fancy Button Hover Effect Code Along</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="buttonCodeAlong.css">
     </head>
 
     <body>
         <section>
-            <form>
-                <button id="button1">Hover Me</button>
-            </form>
+                <button id="button">Hover Me</button>
         </section>
     </body>
 
