too much, finish css

--- a/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
+++ b/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="docStyles.css">
     </head>
 
     <body>
@@ -17,9 +17,13 @@
         <header>
             <h1>Responsive CSS & Flexbox</h1>
             <nav>
-                <a href="" class="previous_next">
-                    <-- Previous</a>
-                        <a href="" class="previous_next">Next --></a>
+                <a href="./09_OtherAssortedUsefulCSSProperties.html" class="previous_next">Previous</a>
+                <section id="developer">
+                    <img src="../../src/html&css/me.jpg" alt="Developer" id="devPhoto">
+                    <h2>Developer</h2>
+                    <h2>Andre/Coetzer</h2>
+                </section>
+                <a href="" class="previous_next">Next</a>
             </nav>
         </header>
 
