--- a/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
+++ b/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
@@ -13,22 +13,13 @@
     </head>
 
     <body>
-
         <header>
             <h1>Responsive CSS & Flexbox</h1>
-            <nav>
-                <a href="./09_OtherAssortedUsefulCSSProperties.html" class="previous_next">Previous</a>
-                <section id="developer">
-                    <img src="../../src/html&css/me.jpg" alt="Developer" id="devPhoto">
-                    <h2>Developer</h2>
-                    <h2>Andre/Coetzer</h2>
-                </section>
-                <a href="" class="previous_next">Next</a>
-            </nav>
         </header>
 
         <main>
             <section id="toc">
+
                 <h2>Table of Contents</h2>
                 <ul>
                     <li><a href="#woeif">What on earth is flexbox?</a></li>
@@ -51,6 +42,19 @@
                         </ul>
                     </li>
                 </ul>
+
+                <section id="developer">
+                    <h2>Developer</h2>
+                    <div id="devInfo">
+                        <img src="../../src/html&css/me.jpg" alt="Developer I Am">
+                        <ul>
+                            <li id="devName">Andre Coetzer</li>
+                            <li id="devTitle">Developer</li>
+                            <li id="devKnowledge">html / css / js</li>
+                        </ul>
+                    </div>
+                </section>
+
             </section>
 
             <section id="notes">
@@ -317,8 +321,10 @@
                 </article>
 
             </section>
-
         </main>
+        <footer>
+
+        </footer>
     </body>
 
 </html>
