--- a/html&css/webdev-Colt/01_CourseOrientation.html
+++ b/html&css/webdev-Colt/01_CourseOrientation.html
@@ -1,32 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
     <head>
-        <!-- title -->
-        <title>HTML - Course Orientation</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Responsive CSS & Flexbox</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="docStyles.css">
     </head>
 
     <body>
+
         <header>
-            <!-- header -->
             <h1>Course Orientation</h1>
         </header>
-        <article>
-            <!-- Table of Contents -->
-            <h2>Table of Contents</h2>
-            <ul>
-                <li>Empty Document</li>
-            </ul>
-        </article>
+
         <main>
-            <!-- main -->
-            <h2><b>Empty Document</b></h2>
-            <p>
-                This section had no note worthy tasks.
-            </p>
+
+            <section id="toc">
+                <h2>Table of Contents</h2>
+                <ul>
+                    <li>Empty Document</li>
+                </ul>
+            </section>
+
+            <section id="notes">
+                <h2><b>Empty Document</b></h2>
+                <p>
+                    This section had no note worthy tasks.
+                </p>
+            </section>
         </main>
         <footer>
-            <!-- footer -->
             <p>
                 document set to change.
             </p>
