--- a/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
+++ b/html&css/webdev-Colt/10_ResponsiveCSS&Flexbox.html
@@ -50,7 +50,8 @@
                         <ul>
                             <li id="devName">Andre Coetzer</li>
                             <li id="devTitle">Developer</li>
-                            <li id="devKnowledge">html / css / js</li>
+                            <li id="devKnowledge"><span class="devKnowledge">html</span> <span
+                                    class="devKnowledge">css</span> <span class="devKnowledge">js</span></li>
                         </ul>
                     </div>
                 </section>
